test/conformance/chainsaw/mutate/mutating-policy/standard/cel-regex-replace/assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: nginx
    image: myregistry.io/nginx:latest
