test/conformance/chainsaw/mutate/mutating-policy/standard/cel-regex-replace/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mpol-cel-regex-replace
spec:
  concurrent: false
  steps:
  - name: create-mutating-policy
    try:
    - apply:
        file: policy.yaml
  - name: wait-for-webhook
    try:
    - assert:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: MutatingPolicy
          metadata:
            name: rewrite-image-registry
          status:
            conditionStatus:
              (conditions[?type == 'WebhookConfigured']):
              - status: "True"
  - name: create-pod
    try:
    - apply:
        file: pod.yaml
  - name: verify-image-rewritten
    try:
    - assert:
        file: assert.yaml
